Update gradle and jetty to latest version